Feature Hints - Add Hints option in menu for reshowing all feature hints

--- a/SocialDistance/src/main/res/menu/main.xml
+++ b/SocialDistance/src/main/res/menu/main.xml
@@ -37,4 +37,9 @@
         android:title="@string/menu_faq"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_hints"
+        android:title="@string/menu_hints"
+        app:showAsAction="never" />
+
 </menu>
