--- a/SocialDistance/src/main/res/layout/activity_splash.xml
+++ b/SocialDistance/src/main/res/layout/activity_splash.xml
@@ -26,14 +26,14 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/main_margin_horizontal"
         android:layout_marginTop="32dp"
-        android:autoSizeMaxTextSize="28dp"
-        android:autoSizeMinTextSize="1dp"
+        android:autoSizeMaxTextSize="28sp"
+        android:autoSizeMinTextSize="1sp"
         android:autoSizeTextType="uniform"
         android:gravity="center"
         android:lines="1"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="28dp"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -45,14 +45,14 @@
         android:id="@+id/splash_cdc_name_ch"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:autoSizeMaxTextSize="16dp"
-        android:autoSizeMinTextSize="1dp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeMinTextSize="1sp"
         android:autoSizeTextType="uniform"
         android:gravity="center"
         android:lines="1"
         android:text="@string/cdc_name_ch"
         android:textColor="@color/white"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/splash_cdc_name_translate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -63,14 +63,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
-        android:autoSizeMaxTextSize="10dp"
-        android:autoSizeMinTextSize="1dp"
+        android:autoSizeMaxTextSize="10sp"
+        android:autoSizeMinTextSize="1sp"
         android:autoSizeTextType="uniform"
         android:gravity="center"
         android:lines="1"
         android:text="@string/cdc_name_translate"
         android:textColor="@color/white"
-        android:textSize="10dp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
