--- a/SocialDistance/src/main/res/layout/activity_main.xml
+++ b/SocialDistance/src/main/res/layout/activity_main.xml
@@ -129,8 +129,8 @@
         android:layout_height="wrap_content"
         android:elevation="@dimen/elevation_toolbar"
         android:visibility="gone"
-        app:constraint_referenced_ids="feature_barcode_back_drop_view, feature_barcode_icon_position_view, feature_barcode_arrow_image, feature_barcode_text, feature_barcode_tip_text"
-        tools:visibility="invisible" />
+        app:constraint_referenced_ids="feature_barcode_back_drop_view, feature_barcode_toolbar_back_drop_view, feature_barcode_icon_position_view, feature_barcode_arrow_image, feature_barcode_text, feature_barcode_tip_text"
+        tools:visibility="gone" />
 
     <View
         android:id="@+id/feature_barcode_back_drop_view"
@@ -139,6 +139,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+    <View
+        android:id="@+id/feature_barcode_toolbar_back_drop_view"
+        style="@style/Feature.Backdrop"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/feature_barcode_icon_position_view"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/feature_barcode_icon_position_view"
@@ -232,7 +240,7 @@
         android:layout_height="wrap_content"
         android:elevation="@dimen/elevation_toolbar"
         android:visibility="gone"
-        app:constraint_referenced_ids="feature_hints_back_drop_view, feature_hints_text"
+        app:constraint_referenced_ids="feature_hints_back_drop_view, feature_hints_toolbar_back_drop_view, feature_hints_icon_position_view, feature_hints_arrow_image, feature_hints_text"
         tools:visibility="visible" />
 
     <View
@@ -241,19 +249,44 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+    <View
+        android:id="@+id/feature_hints_toolbar_back_drop_view"
+        style="@style/Feature.Backdrop"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
+        app:layout_constraintEnd_toStartOf="@id/feature_hints_icon_position_view"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/feature_hints_icon_position_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/toolbar"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/feature_hints_arrow_image"
+        style="@style/Feature.Arrow"
+        android:layout_marginTop="@dimen/feature_margin_around_arrow"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toEndOf="@id/feature_hints_icon_position_view"
+        app:layout_constraintStart_toStartOf="@id/feature_hints_icon_position_view"
+        app:layout_constraintTop_toBottomOf="@id/feature_hints_icon_position_view" />
 
     <TextView
         android:id="@+id/feature_hints_text"
         style="@style/Text.Feature"
         android:layout_marginHorizontal="@dimen/main_margin_horizontal"
+        android:layout_marginTop="@dimen/feature_margin_around_arrow"
         android:gravity="center"
         android:text="@string/feature_hints"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintVertical_bias="0.35" />
+        app:layout_constraintTop_toBottomOf="@id/feature_hints_arrow_image" />
 
     <View
         android:id="@+id/feature_touch_view"
