--- a/SocialDistance/src/main/res/layout/control_item.xml
+++ b/SocialDistance/src/main/res/layout/control_item.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingStart="40dp"
     android:paddingTop="24dp"
-    android:paddingEnd="40dp">
+    android:paddingEnd="32dp">
 
     <TextView
         android:id="@+id/text"
@@ -15,11 +16,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        tools:text="@string/control_exposure" />
+        tools:text="No Exposure Detected Notification No Exposure Detected Notification" />
 
     <Switch
         android:id="@+id/sw"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
