--- a/SocialDistance/src/main/res/layout/activity_control.xml
+++ b/SocialDistance/src/main/res/layout/activity_control.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
-        android:id="@+id/controlBle"
+        android:id="@+id/control_exposure_notification_service"
         layout="@layout/control_item" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
