--- a/SocialDistance/src/main/res/values/styles.xml
+++ b/SocialDistance/src/main/res/values/styles.xml
@@ -40,6 +40,10 @@
         <item name="android:background">@drawable/background_button_major</item>
     </style>
 
+    <style name="Button.Secondary">
+        <item name="android:background">@drawable/background_button_secondary</item>
+    </style>
+
     <style name="Text">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
