--- a/SocialDistance/src/main/res/layout/activity_upload.xml
+++ b/SocialDistance/src/main/res/layout/activity_upload.xml
@@ -94,6 +94,20 @@
         app:layout_constraintTop_toBottomOf="@id/upload_code_text"
         app:layout_constraintVertical_bias="1" />
 
+    <Button
+        android:id="@+id/upload_request_code_button"
+        style="@style/Button.Secondary"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="@dimen/upload_margin_vertical_small"
+        android:text="@string/request_verification_code"
+        android:textColor="@color/button_secondary_normal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/upload_code_edit_text"
+        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintWidth_default="wrap" />
+
     <TextView
         android:id="@+id/upload_description_text"
         style="@style/Text"
@@ -108,7 +122,7 @@
         app:layout_constraintBottom_toTopOf="@id/upload_send_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/upload_code_edit_text"
+        app:layout_constraintTop_toBottomOf="@id/upload_request_code_button"
         tools:text="很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字字很多字很多字＾＿＾" />
 
     <androidx.constraintlayout.widget.Guideline
