--- a/SocialDistance/src/main/res/layout/activity_main.xml
+++ b/SocialDistance/src/main/res/layout/activity_main.xml
@@ -18,20 +18,20 @@
         android:id="@+id/main_clock_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="main_clock_background,main_clock_text"/>
+        app:constraint_referenced_ids="main_clock_background,main_clock_text" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/main_clock_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="fitXY"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/lottie_clock_background"
         app:layout_constraintBottom_toBottomOf="@id/main_clock_text"
         app:layout_constraintEnd_toEndOf="@id/main_clock_text"
         app:layout_constraintStart_toStartOf="@id/main_clock_text"
-        app:layout_constraintTop_toTopOf="@id/main_clock_text" />
+        app:layout_constraintTop_toTopOf="@id/main_clock_text"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/lottie_clock_background" />
 
     <TextClock
         android:id="@+id/main_clock_text"
@@ -66,9 +66,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/main_clock_text"
+        app:layout_constraintVertical_bias="0.2"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintWidth_default="wrap"
-        app:layout_constraintVertical_bias="0.2"
         tools:background="@drawable/background_text_risk_medium"
         tools:text="很長長很長長很長長長很長很長長很長很長很長很長"
         tools:textColor="@color/text_risk_low" />
