--- a/SocialDistance/src/main/res/layout/activity_barcode_scanning.xml
+++ b/SocialDistance/src/main/res/layout/activity_barcode_scanning.xml
@@ -25,8 +25,8 @@
     <TextView
         android:id="@+id/barcode_scanning_hint_text"
         style="@style/Text.Center"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="26dp"
         android:background="@drawable/background_white_radius_21"
         android:minHeight="42dp"
@@ -35,13 +35,13 @@
         android:text="@string/barcode_hint_1922_invalid"
         android:textSize="16dp"
         android:visibility="invisible"
+        app:layout_constrainedHeight="true"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintVertical_bias="0.03"
-        app:layout_constraintWidth_default="wrap"
         tools:visibility="visible" />
 
     <com.google.android.material.button.MaterialButton
