--- a/SocialDistance/src/main/res/layout/activity_cancel_alarm.xml
+++ b/SocialDistance/src/main/res/layout/activity_cancel_alarm.xml
@@ -98,15 +98,15 @@
     <Button
         android:id="@+id/cancel_alarm_send_button"
         style="@style/Button.Major"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:text="@string/send_verification_code"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cancel_alarm_guideline"
-        app:layout_constraintVertical_bias="0.25"
-        app:layout_constraintWidth_default="wrap" />
+        app:layout_constraintVertical_bias="0.25" />
 
     <ProgressBar
         android:id="@+id/progressBar"
