--- a/SocialDistance/src/main/res/layout/activity_daily_summary.xml
+++ b/SocialDistance/src/main/res/layout/activity_daily_summary.xml
@@ -16,7 +16,7 @@
     <TextView
         android:id="@+id/daily_summary_last_check_time_text"
         style="@style/Text.Center"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/main_margin_horizontal_large"
         android:layout_marginTop="@dimen/main_margin_vertical"
         android:autoSizeMaxTextSize="@dimen/text_size_small"
@@ -24,8 +24,8 @@
         android:autoSizeTextType="uniform"
         android:lines="1"
         android:textSize="@dimen/text_size_small"
+        app:layout_constrainedHeight="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:text="@string/main_info_last_check_time" />
