--- a/SocialDistance/src/main/res/layout/activity_request_code.xml
+++ b/SocialDistance/src/main/res/layout/activity_request_code.xml
@@ -49,7 +49,7 @@
     <TextView
         android:id="@+id/request_code_description_text"
         style="@style/Text"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/upload_margin_horizontal"
         android:layout_marginVertical="@dimen/upload_margin_vertical"
         android:autoSizeMaxTextSize="@dimen/text_size"
@@ -57,9 +57,9 @@
         android:autoSizeTextType="uniform"
         android:gravity="center_vertical"
         android:text="@string/request_verification_code_description"
+        app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@id/request_code_send_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/request_code_edit_text"
         tools:text="很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字很多字字很多字很多字＾＿＾" />
@@ -74,15 +74,15 @@
     <Button
         android:id="@+id/request_code_send_button"
         style="@style/Button.Major"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:text="@string/send_verification_code"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/request_code_guideline"
-        app:layout_constraintVertical_bias="0.25"
-        app:layout_constraintWidth_default="wrap" />
+        app:layout_constraintVertical_bias="0.25" />
 
     <ProgressBar
         android:id="@+id/progressBar"
