--- a/SocialDistance/src/main/res/layout/activity_hcert.xml
+++ b/SocialDistance/src/main/res/layout/activity_hcert.xml
@@ -12,61 +12,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/hcert_empty_view_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:constraint_referenced_ids="hcert_empty_image,hcert_description_text,hcert_add_button" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/hcert_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
-
-    <Button
-        android:id="@+id/hcert_add_button"
-        style="@style/Button.Major"
-        android:layout_width="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:text="@string/hcert_button_add"
-        app:layout_constrainedWidth="true"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hcert_guideline"
-        app:layout_constraintVertical_bias="0.25" />
-
-    <TextView
-        android:id="@+id/hcert_description_text"
-        style="@style/Text.AutoSize"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
-        android:layout_marginVertical="@dimen/main_margin_vertical"
-        android:gravity="center"
-        android:text="@string/hcert_description"
-        app:layout_constrainedHeight="true"
-        app:layout_constraintBottom_toTopOf="@id/hcert_add_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hcert_empty_image" />
-
-    <ImageView
-        android:id="@+id/hcert_empty_image"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
-        android:layout_marginVertical="@dimen/main_margin_vertical"
-        android:scaleType="centerInside"
-        android:src="@drawable/icon_hcert"
-        app:layout_constraintBottom_toTopOf="@id/hcert_description_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintVertical_bias="0.7"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
