--- a/SocialDistance/src/main/res/layout/activity_introduction.xml
+++ b/SocialDistance/src/main/res/layout/activity_introduction.xml
@@ -23,21 +23,14 @@
 
     <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
         android:id="@+id/dotsIndicator"
+        style="@style/DotsIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/view_horizontal_margin"
         android:layout_marginRight="@dimen/view_horizontal_margin"
         android:layout_marginBottom="@dimen/view_horizontal_margin"
-        android:foregroundGravity="center"
-        app:dampingRatio="0.5"
-        app:dotsColor="@color/primary"
-        app:dotsSize="8dp"
-        app:dotsSpacing="2dp"
-        app:dotsStrokeColor="@color/primary_dark"
-        app:dotsStrokeWidth="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:stiffness="300" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
