--- a/SocialDistance/src/main/res/values/styles.xml
+++ b/SocialDistance/src/main/res/values/styles.xml
@@ -51,6 +51,10 @@
         <item name="android:background">@drawable/background_button_secondary</item>
     </style>
 
+    <style name="Button.Secondary.Light">
+        <item name="android:background">@drawable/background_button_secondary_light</item>
+    </style>
+
     <style name="Button.Round" parent="Widget.MaterialComponents.Button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -69,9 +73,31 @@
         <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.CornerSize.50percent</item>
     </style>
 
+    <style name="Button.Round.Icon">
+        <item name="android:layout_width">@dimen/button_size_round</item>
+        <item name="android:layout_height">@dimen/button_size_round</item>
+        <item name="android:layout_margin">@dimen/main_margin_horizontal</item>
+        <item name="android:padding">0dp</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconPadding">0dp</item>
+        <item name="iconSize">@dimen/button_icon_size_round</item>
+        <item name="iconTintMode">multiply</item>
+    </style>
+
     <style name="ShapeAppearanceOverlay.CornerSize.50percent" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="DotsIndicator">
+        <item name="android:foregroundGravity">center</item>
+        <item name="dampingRatio">0.5</item>
+        <item name="dotsColor">@color/primary</item>
+        <item name="dotsSize">12dp</item>
+        <item name="dotsSpacing">2.5dp</item>
+        <item name="dotsStrokeColor">@color/primary_dark</item>
+        <item name="dotsStrokeWidth">1dp</item>
+        <item name="stiffness">300</item>
     </style>
 
     <style name="Text">
