Hcert - Add UI layouts for hcert detail page

--- a/SocialDistance/src/main/res/values/styles.xml
+++ b/SocialDistance/src/main/res/values/styles.xml
@@ -47,6 +47,10 @@
         <item name="android:background">@drawable/background_button_major</item>
     </style>
 
+    <style name="Button.Major.Red">
+        <item name="android:background">@drawable/background_button_major_red</item>
+    </style>
+
     <style name="Button.Secondary">
         <item name="android:background">@drawable/background_button_secondary</item>
     </style>
