--- a/SocialDistance/src/main/res/values/colors.xml
+++ b/SocialDistance/src/main/res/values/colors.xml
@@ -16,6 +16,9 @@
     <color name="button_major_normal">@color/primary</color>        <!--   46 182 169  -->
     <color name="button_major_pressed">@color/primary_dark</color>  <!--   28 150 138  -->
     <color name="button_major_disable">#9FD6D0</color>              <!--  159 214 208  -->
+    <color name="button_major_red_normal">#AF4848</color>           <!--  175  72  72  -->
+    <color name="button_major_red_pressed">#D97373</color>          <!--  217 115 115  -->
+    <color name="button_major_red_disable">#E3BABA</color>          <!--  227 186 186  -->
     <color name="button_secondary_normal">@color/text</color>       <!--   73  97  94  -->
     <color name="button_secondary_pressed">#C1CCCB</color>          <!--  193 204 203  -->
 
