--- a/SocialDistance/src/main/res/layout/fragment_hcert_main.xml
+++ b/SocialDistance/src/main/res/layout/fragment_hcert_main.xml
@@ -23,10 +23,12 @@
         android:id="@+id/hcert_view_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/hcert_hint_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/hcert_hint_text"
