--- a/SocialDistance/src/main/res/layout/activity_cancel_alarm.xml
+++ b/SocialDistance/src/main/res/layout/activity_cancel_alarm.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,80 +14,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/cancel_alarm_test_date_text"
+        android:id="@+id/cancel_alarm_text"
         style="@style/Text"
-        android:layout_marginHorizontal="@dimen/upload_margin_horizontal"
-        android:layout_marginTop="@dimen/upload_margin_top"
-        android:text="@string/cancel_alert_test_date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
-    <EditText
-        android:id="@+id/cancel_alarm_test_date_edit_text"
-        style="@style/Widget.AppCompat.EditText"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/upload_margin_horizontal"
-        android:layout_marginTop="@dimen/upload_margin_vertical_small"
-        android:background="@color/white"
-        android:hint="@string/cancel_alert_test_date_hint"
-        android:inputType="none"
-        android:maxLines="1"
-        android:paddingHorizontal="@dimen/upload_edit_text_padding_horizontal"
-        android:paddingVertical="@dimen/upload_edit_text_padding_vertical"
-        android:textColor="@color/text"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cancel_alarm_test_date_text"
-        app:layout_constraintVertical_bias="1" />
-
-    <TextView
-        android:id="@+id/cancel_alarm_code_text"
-        style="@style/Text"
-        android:layout_marginHorizontal="@dimen/upload_margin_horizontal"
-        android:layout_marginTop="@dimen/upload_margin_vertical"
-        android:text="@string/enter_verification_code"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cancel_alarm_test_date_edit_text" />
-
-    <EditText
-        android:id="@+id/cancel_alarm_code_edit_text"
-        style="@style/Widget.AppCompat.EditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/upload_margin_horizontal"
-        android:layout_marginTop="@dimen/upload_margin_vertical_small"
-        android:background="@color/white"
-        android:hint="@string/enter_verification_code_hint"
-        android:inputType="number"
-        android:maxLines="1"
-        android:paddingHorizontal="@dimen/upload_edit_text_padding_horizontal"
-        android:paddingVertical="@dimen/upload_edit_text_padding_vertical"
-        android:textColor="@color/text"
-        android:textSize="@dimen/text_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cancel_alarm_code_text"
-        app:layout_constraintVertical_bias="1" />
-
-    <TextView
-        android:id="@+id/cancel_alarm_description_text"
-        style="@style/Text"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="@dimen/upload_margin_horizontal"
-        android:layout_marginVertical="@dimen/upload_margin_vertical"
-        android:autoSizeMaxTextSize="@dimen/text_size"
-        android:autoSizeMinTextSize="@dimen/text_size_min"
-        android:autoSizeTextType="uniform"
-        android:gravity="center_vertical"
-        android:text="@string/cancel_alert_description"
+        android:layout_margin="@dimen/main_margin_horizontal"
+        android:gravity="top"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@id/cancel_alarm_check_box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        tools:text="文字文字字fianl" />
+
+    <CheckBox
+        android:id="@+id/cancel_alarm_check_box"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/main_margin_horizontal"
+        android:enabled="false"
+        android:text="@string/cancel_alert_acknowledgement"
         app:layout_constraintBottom_toTopOf="@id/cancel_alarm_send_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cancel_alarm_code_edit_text" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/cancel_alarm_guideline"
@@ -100,7 +50,8 @@
         style="@style/Button.Major"
         android:layout_width="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:text="@string/send_verification_code"
+        android:enabled="false"
+        android:text="@string/menu_cancel_alert"
         app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
