--- a/SocialDistance/src/main/res/layout/activity_barcode_scanning.xml
+++ b/SocialDistance/src/main/res/layout/activity_barcode_scanning.xml
@@ -49,7 +49,7 @@
         style="@style/Button.Round"
         android:layout_marginHorizontal="@dimen/main_margin_horizontal"
         android:layout_marginVertical="@dimen/main_margin_vertical"
-        android:text="@string/hcert_menu_apply"
+        android:text="@string/hcert_apply"
         app:layout_constraintBottom_toTopOf="@id/barcode_hcert_import_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
