--- a/SocialDistance/src/main/res/layout/fragment_hcert_main.xml
+++ b/SocialDistance/src/main/res/layout/fragment_hcert_main.xml
@@ -56,6 +56,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <View
+        android:id="@+id/hcert_dotsIndicator_mask"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/background"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/hcert_dotsIndicator"
+        app:layout_constraintEnd_toEndOf="@id/hcert_dotsIndicator"
+        app:layout_constraintStart_toStartOf="@id/hcert_dotsIndicator"
+        app:layout_constraintTop_toTopOf="@id/hcert_dotsIndicator" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/hcert_bottom_barrier"
         android:layout_width="wrap_content"
