--- a/SocialDistance/src/main/res/values/styles.xml
+++ b/SocialDistance/src/main/res/values/styles.xml
@@ -94,9 +94,11 @@
     </style>
 
     <style name="tabIndicator">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">bottom</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
 
