--- a/SocialDistance/src/main/res/layout/item_hcert.xml
+++ b/SocialDistance/src/main/res/layout/item_hcert.xml
@@ -17,12 +17,32 @@
         app:layout_constraintHeight_percent="0.85"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.75">
+        app:layout_constraintWidth_percent="0.75"
+        app:strokeWidth="2dp"
+        tools:strokeColor="@color/button_major_red_pressed">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/main_margin_horizontal">
+            android:paddingHorizontal="@dimen/main_margin_horizontal"
+            android:paddingBottom="@dimen/main_margin_horizontal">
+
+            <TextView
+                android:id="@+id/item_hcert_expired_text"
+                style="@style/Text.AutoSize"
+                android:layout_width="0dp"
+                android:layout_marginTop="8dp"
+                android:layout_height="@dimen/main_margin_horizontal"
+                android:gravity="center"
+                android:lines="1"
+                android:text="@string/hcert_expired"
+                android:textColor="@color/button_major_red_pressed"
+                android:textStyle="bold"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
 
             <ImageView
                 android:id="@+id/item_hcert_qrcode_image"
@@ -33,7 +53,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/item_hcert_expired_text"
                 app:layout_constraintVertical_chainStyle="spread_inside"
                 tools:src="@drawable/icon" />
 
